<resources>
    <string name="app_name">Smart Fridge Application</string>
    <string name="fridges">Fridges</string>
    <string name="preferences">Preferences</string>
    <string name="shoppingCarts">Shopping Carts</string>
    <string name="productList">Product List</string>
    <string name="settings">Settings</string>
    <string name="primaryColor">Primary color</string>
    <string name="secondaryColor">Secondary color</string>
    <string name="chooseColor">Choose color…</string>
    <string name="chooseFromPrimary">Choose a primary color…</string>,
    <string name="noChanges">No changes were applied!</string>
    <string name="resetToDefaults">Reset to defaults</string>

    <!-- Preference list strings -->
    <string name="productName">Product name:</string>
    <string name="associatedFridge">Associated fridge:</string>
    <string name="operatorAndValue">Operator and value: </string>
    <string name="filterByFridgeName">Filter by fridge name…</string>

    <!-- Product list strings -->
    <string name="productMeasurementUnit">Measurement unit</string>
    <string name="caloriesPerUnit">Calories per unit</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    
    <string name="preferencesHint">Change user-wide application settings. Currently only layout color changes are supported. More features to come!</string>

    <string-array name="theme_array">
        <item>Choose a color…</item>
        <item>Green and Yellow</item>
        <item>Black and Red</item>
        <item>Blue and Cyan</item>
    </string-array>
</resources>
