<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="15"
    style="?lightBackground">
    <ImageView
        android:id="@+id/imgListItemPreferenceList"
        android:src="@drawable/ic_settings_cell"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_gravity="center"
        style="?iconBackgroundAgainstSecondary"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:weightSum="9"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:text="@string/productName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            style="?textViewContent"/>
        <TextView
            android:text="@string/associatedFridge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            style="?textViewContent"/>
        <TextView
            android:text="@string/operatorAndValue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            style="?textViewContent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:weightSum="9"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <TextView
            android:id="@+id/txtProductNamePreferenceList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            style="?textViewContent"/>
        <TextView
            android:id="@+id/txtProductAssociatedFridgeNamePreferenceList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            style="?textViewContent"/>
        <TextView
            android:id="@+id/txtProductOperatorAndValueStringPreferenceList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            style="?textViewContent"/>
    </LinearLayout>
</LinearLayout>