<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="14"
    android:orientation="vertical"
    style="?lightBackground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?sidebarTopView">
            </View>

            <view
                android:layout_width="match_parent"
                android:layout_height="2dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="bottom|center"
                style="?sidebarBottomView"/>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfilePictureSidebar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true"
            android:src="@drawable/pic_profile"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingStart="20dp">
        <ImageView
            android:src="@drawable/ic_freezer_fridge"
            android:id="@+id/imgIconFridgesSidebar"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            style="?iconBackgroundAgainstSecondary"/>
        <TextView
            android:text="@string/fridges"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/imgIconFridgesSidebar"
            android:paddingStart="10dp"
            style="?textViewContent"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingStart="20dp">
        <ImageView
            android:id="@+id/imgIconPreferencesSidebar"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings_applications"
            style="?iconBackgroundAgainstSecondary"/>
        <TextView
            android:text="@string/preferences"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/imgIconPreferencesSidebar"
            android:paddingStart="10dp"
            style="?textViewContent"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingStart="20dp">
        <ImageView
            android:id="@+id/imgIconShoppingCartsSidebar"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_shopping_cart"
            style="?iconBackgroundAgainstSecondary"/>
        <TextView
            android:text="@string/shoppingCarts"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/imgIconShoppingCartsSidebar"
            android:paddingStart="10dp"
            style="?textViewContent"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingStart="20dp">
        <ImageView
            android:id="@+id/imgIconProductListSidebar"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_single_product"
            style="?iconBackgroundAgainstSecondary"/>
        <TextView
            android:text="@string/productList"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_toEndOf="@+id/imgIconProductListSidebar"
            android:paddingStart="10dp"
            style="?textViewContent"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingStart="20dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_settings_cell"
            android:id="@+id/imgIconAppSettingsSidebar"
            style="?iconBackgroundAgainstSecondary"/>
        <TextView
            android:text="@string/settings"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:layout_toEndOf="@+id/imgIconAppSettingsSidebar"
            android:paddingEnd="10dp"
            style="?textViewContent"/>
    </RelativeLayout>

</LinearLayout>